[package]
name = "krakio"
version = "0.1.0"
authors = ["Victor Suriel <victorv.suriel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.13"
serde_json = "1.0.59"
tokio-tungstenite = { version = "*", features = ["tls"] }
tokio = { version = "1.4.0", features = ["full", "sync"] }
url = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
getopts = "0.2"
tui = "0.14"
termion = "1.5"
